k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reportes-prod
  labels:
    app: reporte-danos
    env: prod
