k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-reportes
  namespace: reportes-prod
  labels:
    app: php-reportes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-reportes
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: php-reportes
    spec:
      containers:
        - name: php-reportes
          image: REEMPLAZAR_IMAGE_URI
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 18
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
