k8s/08-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: php-reportes-network-policy
  namespace: reportes-prod
spec:
  podSelector:
    matchLabels:
      app: php-reportes
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 80
